# SimpleCompress

./: CMakeLists.txt
compress/: CMakeLists.txt  main.c
core/: CMakeLists.txt
core/data/: stack.c  stack.h  vector.h
core/io/: getline.c  getline.h
core/utils/: error.h  iterator.h
decompress/: CMakeLists.txt
